--- a/components/camera-face/index.wxss
+++ b/components/camera-face/index.wxss
@@ -17,10 +17,10 @@
 }
 
 .camera {
-  width: 480rpx;
-  height: 480rpx;
+  width: 750rpx;
+  height: 505rpx;
   z-index: 1;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .img-view {
@@ -30,10 +30,12 @@
   top: 0;
   left: 0;
   z-index: 999;
+  opacity: 0.5;
 }
 .mask-img {
   width: 750rpx;
   height: 505rpx;
+  
 }
 
 .bottom-view {
